--- a/notebooks/replication/dnc-effect/mde.ipynb
+++ b/notebooks/replication/dnc-effect/mde.ipynb
@@ -7,15 +7,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
-    "import numpy as np\n",
     "\n",
-    "import plotly.express as px\n",
-    "\n",
-    "from data.constants import DATA_FOLDER\n",
-    "\n",
-    "from power import power_uncond\n",
-    "from tabulate import  tabulate"
+    "from power import panel_mde\n",
+    "from tabulate import tabulate"
    ]
   },
   {
@@ -24,8 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comm_panel_in = os.path.join(DATA_FOLDER, \"final\", \"comm_panel.parquet\")\n",
-    "tract_panel_in = os.path.join(DATA_FOLDER, \"final\", \"tract_panel.parquet\")"
+    "panel_in = \"../../../data/final/model_data.parquet\"\n",
+    "mde_out = \"../../../reports/replication/mde.md\""
    ]
   },
   {
@@ -34,10 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comm_panel = pd.read_parquet(comm_panel_in)\n",
-    "comm_panel = comm_panel.query('~is_weekend')\n",
-    "tract_panel = pd.read_parquet(tract_panel_in)\n",
-    "tract_panel = tract_panel.query('~is_weekend')"
+    "panel = pd.read_parquet(panel_in)"
    ]
   },
   {
@@ -46,23 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trt_panel = tract_panel.query(\"(DNC==1)\")"
+    "mde_stats = panel_mde(panel, ['transit'], 'id', 'rides', 'UCMP == 1')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "power_stats_base = power_uncond(trt_panel, ['transit','UCMP'], 'rides', 0)[['transit','UCMP','mean','std','mde','mds']]\n",
-    "power_stats_base['mds'] /= 5e4\n",
-    "plot_data = power_stats_base.round(1).set_index(['UCMP','transit']).sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +66,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Daily Rides</th>\n",
-       "      <th>Mean (SD)</th>\n",
-       "      <th>Minimum Detectable Effect</th>\n",
-       "      <th>MDE Per Attendee</th>\n",
+       "      <th>Mean Rides per Unit per Day (SD)</th>\n",
+       "      <th>Minimum Detectable Change</th>\n",
+       "      <th>Minimum Additional Rides</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Serves DNC</th>\n",
        "      <th>Transit</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -101,113 +79,98 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">0</th>\n",
        "      <th>bike</th>\n",
-       "      <td>72.8 (181.6)</td>\n",
-       "      <td>12.4</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>50.3 (17.5)</td>\n",
+       "      <td>151%</td>\n",
+       "      <td>954</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train</th>\n",
-       "      <td>2651.2 (4084.7)</td>\n",
-       "      <td>584.0</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>1482.0 (392.7)</td>\n",
+       "      <td>227%</td>\n",
+       "      <td>487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>uber</th>\n",
-       "      <td>187.5 (685.8)</td>\n",
-       "      <td>31.1</td>\n",
-       "      <td>2.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">1</th>\n",
-       "      <th>bike</th>\n",
-       "      <td>177.0 (237.1)</td>\n",
-       "      <td>55.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>train</th>\n",
-       "      <td>2492.9 (2102.1)</td>\n",
-       "      <td>787.0</td>\n",
-       "      <td>0.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>uber</th>\n",
-       "      <td>925.3 (1981.5)</td>\n",
-       "      <td>438.9</td>\n",
-       "      <td>1.4</td>\n",
+       "      <td>753.1 (583.5)</td>\n",
+       "      <td>142%</td>\n",
+       "      <td>1251</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Daily Rides               Mean (SD)  Minimum Detectable Effect  \\\n",
-       "Serves DNC Transit                                               \n",
-       "0          bike        72.8 (181.6)                       12.4   \n",
-       "           train    2651.2 (4084.7)                      584.0   \n",
-       "           uber       187.5 (685.8)                       31.1   \n",
-       "1          bike       177.0 (237.1)                       55.4   \n",
-       "           train    2492.9 (2102.1)                      787.0   \n",
-       "           uber      925.3 (1981.5)                      438.9   \n",
+       "        Mean Rides per Unit per Day (SD) Minimum Detectable Change  \\\n",
+       "Transit                                                              \n",
+       "bike                         50.3 (17.5)                      151%   \n",
+       "train                     1482.0 (392.7)                      227%   \n",
+       "uber                       753.1 (583.5)                      142%   \n",
        "\n",
-       "Daily Rides         MDE Per Attendee  \n",
-       "Serves DNC Transit                    \n",
-       "0          bike                  0.4  \n",
-       "           train                 4.5  \n",
-       "           uber                  2.4  \n",
-       "1          bike                  0.2  \n",
-       "           train                 0.9  \n",
-       "           uber                  1.4  "
+       "        Minimum Additional Rides  \n",
+       "Transit                           \n",
+       "bike                         954  \n",
+       "train                        487  \n",
+       "uber                        1251  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plot_data.index.set_names(['Serves DNC', 'Transit'], inplace=True)\n",
-    "plot_data.columns.set_names('Daily Rides', inplace=True)\n",
-    "plot_data['Mean (SD)'] = plot_data['mean'].astype(str) + plot_data['std'].apply(\" ({})\".format)\n",
-    "plot_data.drop(columns=['mean','std'], inplace=True)\n",
-    "plot_data.rename(columns={'mde': 'Minimum Detectable Effect',\n",
-    "                          'mds': 'MDE Per Attendee'}, inplace=True)\n",
-    "plot_data = plot_data.iloc[:, [2,0,1]]\n",
-    "plot_data"
+    "# Format for presentation.\n",
+    "mde_stats.index.set_names(['Transit'], inplace=True)\n",
+    "mde_stats['Mean Rides per Unit per Day (SD)'] = mde_stats['mean'].apply(\"{:.1f}\".format) + \\\n",
+    "                                                mde_stats['std'].apply(\" ({:.1f})\".format)\n",
+    "mde_stats['Minimum Detectable Change'] = mde_stats['mde'].apply(\"{:.0%}\".format)\n",
+    "mde_stats['Minimum Additional Rides'] = mde_stats['mds'].apply(\"{:.0f}\".format)\n",
+    "mde_stats.drop(columns=['mean','std','mde','mds'], inplace=True)\n",
+    "mde_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|   Serves DNC | Transit   | Mean (SD)       |   Minimum Detectable Effect |   MDE Per Attendee |\n",
-      "|--------------|-----------|-----------------|-----------------------------|--------------------|\n",
-      "|            0 | bike      | 72.8 (181.6)    |                        12.4 |                0.4 |\n",
-      "|            0 | train     | 2651.2 (4084.7) |                       584   |                4.5 |\n",
-      "|            0 | uber      | 187.5 (685.8)   |                        31.1 |                2.4 |\n",
-      "|            1 | bike      | 177.0 (237.1)   |                        55.4 |                0.2 |\n",
-      "|            1 | train     | 2492.9 (2102.1) |                       787   |                0.9 |\n",
-      "|            1 | uber      | 925.3 (1981.5)  |                       438.9 |                1.4 |\n"
+      "| Transit   | Mean Rides per Unit per Day (SD)   | Minimum Detectable Change   |   Minimum Additional Rides |\n",
+      "|-----------|------------------------------------|-----------------------------|----------------------------|\n",
+      "| bike      | 50.3 (17.5)                        | 151%                        |                        954 |\n",
+      "| train     | 1482.0 (392.7)                     | 227%                        |                        487 |\n",
+      "| uber      | 753.1 (583.5)                      | 142%                        |                       1251 |\n"
      ]
     }
    ],
    "source": [
-    "with open(\"../../../reports/replication/mde.md\",\"w\") as f:\n",
-    "    tbl = tabulate(plot_data.reset_index(), \n",
-    "                   headers=plot_data.reset_index().columns, \n",
+    "\n",
+    "# Note: For future reference if you need multi-header columns:\n",
+    "# The best option is to tabualte with tablefmt=html, open the file and\n",
+    "# added a new <tr> in the table header, fixed the column name labels, \n",
+    "# and used the <th colspan=\"2\"> attribute to make the spanning columns.\n",
+    "\n",
+    "with open(mde_out,\"w\") as f:\n",
+    "    tbl = tabulate(mde_stats.reset_index(), \n",
+    "                   headers=mde_stats.reset_index().columns, \n",
     "                   showindex=False,\n",
     "                   tablefmt='github')\n",
     "    f.write(tbl)\n",
     "    print(tbl)\n",
-    "!cp ../../../reports/replication/mde.md ../../../../eric-mc2-cv/static/uploads/"
+    "\n",
+    "!cp {mde_out} ../../../../eric-mc2-cv/static/uploads/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
