--- a/notebooks/replication/dnc-effect/mde.ipynb
+++ b/notebooks/replication/dnc-effect/mde.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -81,20 +81,20 @@
        "    <tr>\n",
        "      <th>bike</th>\n",
        "      <td>50.3 (17.5)</td>\n",
-       "      <td>151%</td>\n",
-       "      <td>954</td>\n",
+       "      <td>+151%</td>\n",
+       "      <td>10235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train</th>\n",
        "      <td>1482.0 (392.7)</td>\n",
-       "      <td>227%</td>\n",
-       "      <td>487</td>\n",
+       "      <td>+227%</td>\n",
+       "      <td>58655</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>uber</th>\n",
        "      <td>753.1 (583.5)</td>\n",
-       "      <td>142%</td>\n",
-       "      <td>1251</td>\n",
+       "      <td>+142%</td>\n",
+       "      <td>55036</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -103,18 +103,18 @@
       "text/plain": [
        "        Mean Rides per Unit per Day (SD) Minimum Detectable Change  \\\n",
        "Transit                                                              \n",
-       "bike                         50.3 (17.5)                      151%   \n",
-       "train                     1482.0 (392.7)                      227%   \n",
-       "uber                       753.1 (583.5)                      142%   \n",
+       "bike                         50.3 (17.5)                     +151%   \n",
+       "train                     1482.0 (392.7)                     +227%   \n",
+       "uber                       753.1 (583.5)                     +142%   \n",
        "\n",
        "        Minimum Additional Rides  \n",
        "Transit                           \n",
-       "bike                         954  \n",
-       "train                        487  \n",
-       "uber                        1251  "
+       "bike                       10235  \n",
+       "train                      58655  \n",
+       "uber                       55036  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,17 +122,19 @@
    "source": [
     "# Format for presentation.\n",
     "mde_stats.index.set_names(['Transit'], inplace=True)\n",
-    "mde_stats['Mean Rides per Unit per Day (SD)'] = mde_stats['mean'].apply(\"{:.1f}\".format) + \\\n",
-    "                                                mde_stats['std'].apply(\" ({:.1f})\".format)\n",
-    "mde_stats['Minimum Detectable Change'] = mde_stats['mde'].apply(\"{:.0%}\".format)\n",
+    "mde_stats['Mean Rides per Unit per Day (SD)'] = mde_stats['ar_mean'].apply(\"{:.1f}\".format) + \\\n",
+    "                                                mde_stats['ar_std'].apply(\" ({:.1f})\".format)\n",
+    "mde_stats['Minimum Detectable Change'] = \"+\" + mde_stats['mdc'].apply(\"{:.0%}\".format)\n",
     "mde_stats['Minimum Additional Rides'] = mde_stats['mds'].apply(\"{:.0f}\".format)\n",
-    "mde_stats.drop(columns=['mean','std','mde','mds'], inplace=True)\n",
+    "mde_stats.drop(columns=['ar_mean','ar_std','mdc','mds',\n",
+    "                        'geo_mean','exp(geo_mean)', 'geo_std',\n",
+    "                        'se', 'exp(se)', 'mde', 'n'], inplace=True)\n",
     "mde_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -141,9 +143,9 @@
      "text": [
       "| Transit   | Mean Rides per Unit per Day (SD)   | Minimum Detectable Change   |   Minimum Additional Rides |\n",
       "|-----------|------------------------------------|-----------------------------|----------------------------|\n",
-      "| bike      | 50.3 (17.5)                        | 151%                        |                        954 |\n",
-      "| train     | 1482.0 (392.7)                     | 227%                        |                        487 |\n",
-      "| uber      | 753.1 (583.5)                      | 142%                        |                       1251 |\n"
+      "| bike      | 50.3 (17.5)                        | +151%                       |                      10235 |\n",
+      "| train     | 1482.0 (392.7)                     | +227%                       |                      58655 |\n",
+      "| uber      | 753.1 (583.5)                      | +142%                       |                      55036 |\n"
      ]
     }
    ],
